force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>