force-app/main/default/objects/Region__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Primary city of the zip code</description>
    <label>Primary City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>