force-app/main/default/objects/Region__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>CBSA Code Number</description>
    <label>CBSA Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>