force-app/main/default/objects/Region__c/fields/Fulfillment_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Tier__c</fullName>
    <label>Fulfillment Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NED</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>TWO</fullName>
            </value>
            <value>
                <fullName>THREE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>