force-app/main/default/objects/Region__c/fields/Fulfillment_Tier_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Tier_Coefficient__c</fullName>
    <label>Fulfillment Tier Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>