force-app/main/default/objects/Region__c/fields/Housekeeping_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Coefficient__c</fullName>
    <label>Housekeeping Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>