force-app/main/default/objects/Region__c/fields/Lawn_Care_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Care_Coefficient__c</fullName>
    <label>Lawn Care Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>