force-app/main/default/objects/Region__c/fields/Pest_Control_Coefficent__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Coefficent__c</fullName>
    <label>Pest Control Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>