force-app/main/default/objects/Region__c/fields/Pool_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Pool_Coefficient__c</fullName>
    <label>Pool Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>