force-app/main/default/objects/Region__c/fields/Pool_Service_Available__c.field-meta.xml
<CustomField>
    <fullName>Pool_Service_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not we have pool cleaning services available in this area.</description>
    <label>Pool Service Available</label>
    <type>Checkbox</type>
</CustomField>