force-app/main/default/objects/Region__c/fields/Region_Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Region_Lat_Long__c</fullName>
    <label>Region Lat / Long</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>