force-app/main/default/objects/Region__c/fields/RegionID__c.field-meta.xml
<CustomField>
    <fullName>RegionID__c</fullName>
    <description>CBSA name</description>
    <label>CBSA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>