force-app/main/default/objects/Region__c/fields/Route_Optimized__c.field-meta.xml
<CustomField>
    <fullName>Route_Optimized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route Optimized</label>
    <type>Checkbox</type>
</CustomField>