force-app/main/default/objects/Region__c/fields/Snow_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Snow_Coefficient__c</fullName>
    <label>Snow Coefficient</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>