force-app/main/default/objects/Region__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Time zone based on Zip Code</description>
    <label>Time Zone</label>
    <length>120</length>
    <type>Text</type>
</CustomField>