force-app/main/default/objects/Region__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Five digit Zip Code</description>
    <externalId>true</externalId>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>