force-app/main/default/objects/Region__c/fields/Zip_Code_Length__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Length__c</fullName>
    <formula>LEN( Zip_Code__c )</formula>
    <label>Zip Code Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>