force-app/main/default/objects/Region__c/fields/Zip_Code_State_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_State_Name_Full__c</fullName>
    <label>Zip Code State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>