force-app/main/default/objects/Region__c/fields/Zip_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Type__c</fullName>
    <description>Type of Zip code (Standard, PO Box, ETC)</description>
    <label>Zip Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>PO BOX</fullName>
            </value>
            <value>
                <fullName>UNIQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>