force-app/main/default/objects/Region__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Type__c</columns>
    <columns>Code__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>