force-app/main/default/objects/Region__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code__c</columns>
    <columns>Zip_Code_Type__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>County__c</columns>
    <columns>Region_Lat_Long__Latitude__s</columns>
    <columns>Region_Lat_Long__Longitude__s</columns>
    <columns>Pool_Service_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Updated Today</label>
</ListView>