force-app/main/default/objects/Region__c/listViews/Missing_Zips.listView-meta.xml
<ListView>
    <fullName>Missing_Zips</fullName>
    <columns>NAME</columns>
    <columns>RegionID__c</columns>
    <columns>State__c</columns>
    <columns>Type__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Code__c</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>a1R</value>
    </filters>
    <label>Missing Zips</label>
</ListView>